--- a/Vulkan/Vulkan.vcxproj
+++ b/Vulkan/Vulkan.vcxproj
@@ -134,10 +134,16 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Renderer\Vulkan\VulkanDevice.cpp" />
+    <ClCompile Include="Renderer\Vulkan\VulkanRenderer.cpp" />
+    <ClCompile Include="Renderer\Vulkan\VulkanSwapchain.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Renderer.h" />
+    <ClInclude Include="Renderer\Vulkan\VulkanDevice.h" />
     <ClInclude Include="Renderer\Vulkan\VulkanInits.h" />
+    <ClInclude Include="Renderer\Vulkan\VulkanRenderer.h" />
+    <ClInclude Include="Renderer\Vulkan\VulkanSwapchain.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
